Fix python planner... again
