# PluginServices/LightService/Controllers/LightController.cs
@@ -15,7 +15,7 @@ namespace PartyPlanning.PluginServices.LightService.Controllers
 
         // private readonly IMongoCollection<BsonDocument> _smartDevices = database.GetCollection<BsonDocument>("SmartDevices");
         // private readonly IMongoCollection<Light> _lights = database.GetCollection<Light>("Lights");
-        private const int LatencyBuffer = 300; // milliseconds
+        private const int LATENCY_BUFFER = 300; // milliseconds
 
         /// <summary>
         /// Retrieves all lights in the system.
@@ -96,8 +96,8 @@ namespace PartyPlanning.PluginServices.LightService.Controllers
             // Check if the light has a scheduled state change
             if (changeStateRequest.ScheduledTime != null)
             {
-                // Calculate the time until the scheduled state change
-                var timeUntilChange = Math.Max((changeStateRequest.ScheduledTime.Value - DateTime.Now).Milliseconds, 0);
+                // Calculate the time until the scheduled state change (include a latency buffer to account for network latency)
+                var timeUntilChange = Math.Max((changeStateRequest.ScheduledTime.Value - DateTime.Now + new TimeSpan(LATENCY_BUFFER)).Milliseconds, 0);
 
                 // Wait until the scheduled time
                 await Task.Delay(timeUntilChange).ConfigureAwait(false);
